fix: refactored trainers route
